welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: ';' expected but ',' found.
  case "B" => avance(),avance()
                      ^BDR2:17: error: Unmatched closing brace '}' ignored here
	}
        ^